--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>
       <div class="container">
         <span class="what">NodeSchool</span>
-        <span class="where">Fujisawa, Kanagawa, Japan</span>
+        <span class="where">Fujisawa</span>
         </div>
     </h1>
     <h2>Helping you JavaScript since 2014</h2>
